--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,12 @@
 body {
     margin: 0;
-    font-family: 'Inter', system-ui;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #e7f6ff;
+}
+
+* {
+    font-family: 'Inter', system-ui;
 }
 
 .wrapper {
@@ -32,27 +35,8 @@ header {
     }
 }
 
-.card {
-    border: 1px solid #f3f3f3;
-    padding: 30px;
-    width: 220px;
-    border-radius: 40px;
-    margin-right: 30px;
-
-    span {
-        font-size: 13px;
-        opacity: 0.5;
-        text-transform: uppercase;
-    }
-
-    b {
-        font-size: 14px;
-    }
-
-    h5 {
-        font-weight: 400;
-        font-size: 14px;
-    }
+.cart {
+    cursor: pointer;
 }
 
 .button {
@@ -63,4 +47,165 @@ header {
     height: 32px;
     width: 32px;
     cursor: pointer;
+}
+
+.search-block {
+    border: 1px solid #f3f3f3;
+    border-radius: 10px;
+    padding: 0 15px;
+
+    input {
+        border: 0;
+        padding: 13px;
+        font-size: 16px;
+        width: 200px;
+    }
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.drawer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 420px;
+    height: 100%;
+    right: 0;
+    background: #ffffff;
+    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+
+    .items {
+        flex: 1;
+        overflow: auto;
+        margin-bottom: 40px;
+    }
+
+    h2 {
+        margin: 0;
+    }
+}
+
+.cartTotalBlock {
+    ul {
+        display: block;
+        margin-bottom: 40px !important;
+
+        li {
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 20px;
+
+            div {
+                flex: 1;
+                height: 1px;
+                border-bottom: 1px dashed #dfdfdf;
+                position: relative;
+                top: -4px;
+                margin: 0 7px;
+            }
+        }
+    }
+
+    .greenButton {
+        position: relative;
+
+        &:disabled {
+            animation: button-loading 0.6s ease-in-out infinite;
+        }
+
+        &:hover {
+            img {
+                transform: translateX(5px);
+            }
+        }
+
+        img {
+            position: absolute;
+            right: 30px;
+            top: 20px;
+            transition: transform 0.15s ease-in-out;
+        }
+    }
+}
+
+.greenButton {
+    width: 100%;
+    height: 55px;
+    background: #9dd558;
+    border-radius: 18px;
+    border: 0;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.1s ease-in-out;
+
+    &:disabled {
+        background-color: #bebebe !important;
+        cursor: default;
+    }
+
+    &:hover {
+        background: lighten(#9dd558, 5%);
+    }
+
+    &:active {
+        background: darken(#9dd558, 5%);
+    }
+}
+
+.cartItem {
+    border: 1px solid #f3f3f3;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 20px;
+
+    .cartItemImg {
+        height: 70px;
+        width: 70px;
+        background-size: contain;
+        background-position: 0 -3px;
+        background-repeat: no-repeat;
+        margin-right: 20px;
+    }
+
+    p {
+        font-size: 16px;
+        margin: 0;
+    }
+
+    b {
+        font-size: 14px;
+    }
+
+    .removeBtn {
+        opacity: 0.5;
+        cursor: pointer;
+        transition: opacity 0.15s ease-in-out;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+@keyframes button-loading {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
+    }
 }
