--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,16 @@ header {
     border: 1px solid #f3f3f3;
     border-radius: 10px;
     padding: 0 15px;
+    position: relative;
+
+    .clear {
+        position: absolute;
+        right: 0;
+        width: 18px;
+        height: 18px;
+        top: 14px;
+        right: 15px;
+    }
 
     input {
         border: 0;
@@ -78,6 +88,7 @@ header {
     position: absolute;
     width: 420px;
     height: 100%;
+    top: 0;
     right: 0;
     background: #ffffff;
     box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
