--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,7 +6,15 @@
     border-radius: 40px;
     margin-right: 30px;
     margin-bottom: 30px;
-
+    transition: all 0.3s;
+    &:hover {
+        background: #ffffff;
+        border: 1px solid #f8f8f8;
+        box-sizing: border-box;
+        box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
+        border-radius: 40px;
+        transform: translateY(-5px);
+    }
     span {
         font-size: 13px;
         opacity: 0.5;
