--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -35,6 +35,7 @@
     transition: transform 0.3s ease-out;
 
     .items {
+        height: 300px;
         flex: 1;
         overflow: auto;
         margin-bottom: 40px;
@@ -42,5 +43,12 @@
 
     h2 {
         margin: 0;
+    }
+}
+
+@media (max-width: 320px) {
+    .drawer {
+        width: 100%;
+        height: 100%;
     }
 }
